CI/CD 테스트 (#115)
* update: Issue Template 추가

* update: Pull Request Template 추가

* chore: 상위 docker-compose.yml 파일 작성

* [#1] 유저 엔티티 구현 (#4)

* feat: Request 헤더 값 기반의 AuditorAware 구현체 생성 및 적용

* feat: BaseEntity 구현

* chore: application.yml 파일 추가

* feat: User 공통 ErrorCode 및 Exception 작성

* feat: User VO 작성(UserRole, UserStatus)

* feat: User Entity 구현

* feat: User Domain ErrorCode, Exception 구현

* test: User 엔티티에 대한 테스트 코드 작성

* style: 람다 표현식으로 변경

* [#3] 편딩 엔티티 구현 및 기본 계층 구현 (#5)

* feat: Funding 도메인 엔티티 생성 및 계층 분리 (funding, fundingProjectStatistics)

* refactor: 예외처리 공통화
- 같은 JVM 이기에 하나의 전역처리기(@RestControllerAdvice)를 두고, 도메인 예외는 FundingDomainException / 애플리케이션 예외는 FundingApplicationException 에서 공통으로 처리하기로 결정
- 과도하게 불필요한 클래스들이 생긴다고 생각

* feat: 펀딩 서비스 application.yml 설정 및 Eureka 서버 application.yml 설정

* [#7] 프로젝트 엔티티 구현 (#8)

* feat: project 도메인 엔티티 생성 및 에러처리 공통화

* feat: JpaAuditingConfig 설정 및 BaseEntity 적용

* [#12] 리워드 서비스 초기 설정

* [#9] 프로젝트 드래프트 작성 기능 구현 (#15)

* feat: project 도메인 엔티티 생성 및 에러처리 공통화

* feat: JpaAuditingConfig 설정 및 BaseEntity 적용

* feat: settlement, funding, story Draft 작성 API 구현

* chore: application.yml 파일 추가

* refactor: dto 패키지로 이동

* refactor: exception 공통화 처리

* feat: Reward Draft 작성 API 구현

* refactor: request dto에 toCommand 메서드 추가

* refactor: Draft 도메인 검증/연관관계 로직 개선

* fix: merge conflict 해결

* refactor: 프로젝트 드래프트 관련 API 경로 정리

* [#2] 결제 엔티티 구현 (#10)

* chore: application.yml 파일 추가

* feat: PaymentException, PaymentErrorCode 구현

* feat: Request 헤더 값 기반의 AuditorAware 구현체 생성 및 적용

* feat: BaseEntity, BaseCreateEntity 구현

* feat: Payment 관련 VO 작성

* feat: Payment 엔티티 구현

* feat: Payment Domain Exception, ErrorCode 작성

* refactor: Money에 대한 예외 코드를 Payment Money로 변경

* style: 줄바꿈 변경

* feat: Settlement 관련 VO 작성

* feat: Settlement 엔티티 구현

* del: Component 어노테이션 제거

* feat: Payment 생성 시 PENDING 상태로 생성되도록 수정

* test: Payment 엔티티에 대한 테스트 코드 작성

* feat: Settlement Status에 대한 상태 전이 로직 추가

* test: Settlement 엔티티에 대한 테스트 코드 작성

* [#6] 펀딩 서비스 후원 요청 